# artifacthub-rs

./: Cargo.toml  LICENSE  MCP_README_REFERENCES.md  README.md  install.sh  justfile  opencode.json  release-plz.toml
.github/workflows/: ci.yaml  homebrew-tap.yaml  release-plz.yaml  release.yaml  zizmor.yaml
crates/artifacthub-client/: CHANGELOG.md  Cargo.toml  README.md
crates/artifacthub-client/src/: api.rs  client.rs  error.rs  kind.rs  lib.rs  params.rs
crates/artifacthub-client/src/api/: helm.rs  packages.rs  repositories.rs  security.rs  stats.rs
crates/artifacthub-client/src/endpoints/: helm.rs  mod.rs  packages.rs  repositories.rs  security.rs  stats.rs
crates/artifacthub-client/src/models/: changelog.rs  json.rs  mod.rs  package.rs  repository.rs  search.rs  security.rs  values.rs
crates/artifacthub-client/tests/: client.rs  kind.rs  models.rs  packages.rs  repositories.rs
crates/artifacthub-mcp-server/: CHANGELOG.md  Cargo.toml  README.md
crates/artifacthub-mcp-server/src/: main.rs  tools.rs
crates/artifacthub-mcp-server/src/tools/: get_changelog_md.rs  get_package.rs  get_package_changelog.rs  get_package_readme.rs  get_package_security_report.rs  get_package_star_stats.rs  get_package_template.rs  get_package_template_data.rs  get_package_templates.rs  get_package_values.rs  get_package_values_schema.rs  get_package_versions.rs  get_server_info.rs  schema.rs  search_packages.rs  search_repositories.rs
crates/artifacthub-mcp-server/tests/: e2e.rs
src/: client.rs  format.rs  kind.rs  lib.rs  main.rs  tools.rs
src/tools/: get_changelog_md.rs  get_package.rs  get_package_changelog.rs  get_package_readme.rs  get_package_security_report.rs  get_package_star_stats.rs  get_package_templates.rs  get_package_values.rs  get_package_values_schema.rs  get_package_versions.rs  get_server_info.rs  search_packages.rs  search_repositories.rs
tests/: e2e.rs
