[workspace]
members = [
    "crates/artifacthub-client",
    "crates/artifacthub-mcp-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
reqwest = { version = "=0.13.3", features = ["json", "query"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros"] }
schemars = { version = "=1.2.1", features = ["derive"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
flate2 = "=1.1.9"
tar = "=0.4.46"
clap = { version = "=4.6.1", features = ["derive"] }
wiremock = "=0.6.5"
