[workspace]
members = [
    "crates/artifacthub-client",
    "crates/artifacthub-mcp-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/luxass/artifacthub-rs"

[workspace.dependencies]
artifacthub-client = { version = "=0.0.1", path = "crates/artifacthub-client" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
reqwest = { version = "=0.13.3", features = ["json", "query"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros"] }
schemars = { version = "=1.2.1", features = ["derive"] }
rmcp = { version = "=1.7.0", features = ["server", "transport-io"] }
clap = { version = "=4.6.1", features = ["derive"] }
wiremock = "=0.6.5"
