[package]
name = "artifacthub-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust client library for the Artifact Hub API"
repository = "https://github.com/luxass/artifacthub-mcp"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]
