[package]
name = "artifacthub-client"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client library for the Artifact Hub API"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]
