[package]
name = "artifacthub-client"
version = "0.0.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust client library for the Artifact Hub API"
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true, optional = true }

[features]
schemars = ["dep:schemars"]

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
