[package]
name = "artifacthub-mcp"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "MCP server for Artifact Hub - search packages, get details, view changelogs, and extract Helm chart values"
repository = "https://github.com/luxass/artifacthub-mcp"
readme = "../../README.md"

[dependencies]
artifacthub-client = { path = "../artifacthub-client", features = ["schemars"] }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
clap = { workspace = true }

[features]
e2e = []

[dev-dependencies]
wiremock = { workspace = true }
