[package]
name = "artifacthub-mcp"
version = "0.2.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Artifact Hub - search packages, get details, view changelogs, and extract Helm chart values"
readme = "README.md"

[dependencies]
artifacthub-client = { workspace = true, features = ["schemars"] }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
clap = { workspace = true }

[features]
e2e = []

[dev-dependencies]
wiremock = { workspace = true }
